WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41794
compositing/iframes/iframe-resize.html displays incorrectly after the resize
https://bugs.webkit.org/show_bug.cgi?id=41794
Summary
compositing/iframes/iframe-resize.html displays incorrectly after the resize
Simon Fraser (smfr)
Reported
2010-07-07 13:10:35 PDT
The testcase at LayoutTests/compositing/iframes/iframe-resize.html displays incorrectly on screen when run manually.
Attachments
Patch
(8.31 KB, patch)
2010-07-07 17:45 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-07-07 14:04:25 PDT
RenderLayerCompositor::updateContentLayerOffset() is getting called before widgets have been updated after layout.
Simon Fraser (smfr)
Comment 2
2010-07-07 17:33:16 PDT
This test is disabled too:
bug 38888
.
Simon Fraser (smfr)
Comment 3
2010-07-07 17:45:43 PDT
Created
attachment 60814
[details]
Patch
Simon Fraser (smfr)
Comment 4
2010-07-07 17:50:31 PDT
I field
bug 41819
to investigate just doing compositing updates after widget updates.
Simon Fraser (smfr)
Comment 5
2010-07-08 22:13:36 PDT
<
rdar://problem/8174144
>
Simon Fraser (smfr)
Comment 6
2010-07-08 22:34:03 PDT
http://trac.webkit.org/changeset/62894
Simon Fraser (smfr)
Comment 7
2010-07-08 22:35:33 PDT
***
Bug 41329
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug